[package]
name = "envy"
version = "0.3.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "deserialize env vars into typesafe structs"
documentation = "https://softprops.github.io/envy"
homepage = "https://github.com/softprops/envy"
repository = "https://github.com/softprops/envy"
keywords = ["serde", "env"]
license = "MIT"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
